# VesselAnalyzer

./: LICENSE  README.md  VesselAnalyzer.py  ostium_logreg_data.json  ostium_logreg_weights.json
VesselAnalyzer/: CHANGELOG.md  CMakeLists.txt  VesselAnalyzer.py  branch_cost_field.py  centerline_analysis.py  centerline_graph.py  centerline_strategies.py  ostium_confidence.py  ostium_logreg.py  ostium_logreg_data.json  ostium_logreg_weights.json  per_branch_centerline_pipeline.py  per_branch_centerline_pipeline_patch.py  pipeline_context.py  test_vessel_pure.py  vessel_analyzer_invariants_patch.py  vessel_analyzer_ui.py  vessel_analyzer_ui_cc_cli_patch.py  vessel_blender_mixin.py  vessel_blender_multiray_mixin.py  vessel_blender_multiray_script.py  vessel_blender_multiray_server.py  vessel_branch_accessor_mixin.py  vessel_branch_validation.py  vessel_cc_cli_mixin.py  vessel_centerline_mixin.py  vessel_centerline_stage.py  vessel_centerline_widget_mixin.py  vessel_cloudcompare_mixin.py  vessel_debug_log.py  vessel_embo_compare_widget_mixin.py  vessel_findings_mixin.py  vessel_findings_stage.py  vessel_geometry.py  vessel_intervention_widget_mixin.py  vessel_multiray_server.py  vessel_navigation_widget_mixin.py  vessel_ostium_mixin.py  vessel_ostium_stage.py  vessel_pipeline.py  (+9 more)
VesselAnalyzer/Old/: ostium_logreg.py
VesselAnalyzer/scripts/: append_boilerplate.py
VesselAnalyzer/testing/: test_branch_validation.py
